--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/**:root {
   --foreground-rgb: 60, 54, 51;
   --background-rgb: 238, 237, 235;
   --nav-foreground-rgb: 238, 237, 235;
@@ -35,7 +35,7 @@ body {
 .bg-dashnav {
   color: rgb(var(--dashnav-foreground-rgb));
   background: rgb(var(--dashnav-background-rgb));
-}
+}**/
 
 @layer utilities {
   .text-balance {
